--- a/Public/index.html
+++ b/Public/index.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Climate+Crisis&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../Assets/css/style.css">
-    <title>Template</title>
+    <title>Fallout</title>
 </head>
 
 <body>
